--- a/app-example/Gemfile
+++ b/app-example/Gemfile
@@ -1,26 +1,15 @@
-source 'http://rubygems.org'
+      source 'http://rubygems.org'
 
-gem 'rails', '3.0.0.beta3'
+      # Bundle edge Rails & Rack:
+      gem 'rails', '3.0.0.beta3', :git => 'git://github.com/rails/rails.git'
+      gem 'rack', '1.1.0', :git => 'git://github.com/rails/rack.git'
 
-# Bundle edge Rails instead:
-# gem 'rails', :git => 'git://github.com/rails/rails.git'
+      gem 'rack-mount'
+      gem 'rack-test'
+      gem 'sqlite3-ruby', :require => 'sqlite3'
 
-gem 'sqlite3-ruby', :require => 'sqlite3'
+      # Bundle the extra gems:
+ gem 'devise', '1.1.rc1' 
 
-# Use unicorn as the web server
-# gem 'unicorn'
 
-# Deploy with Capistrano
-# gem 'capistrano'
 
-# Bundle the extra gems:
-# gem 'bj'
-# gem 'nokogiri', '1.4.1'
-# gem 'sqlite3-ruby', :require => 'sqlite3'
-# gem 'aws-s3', :require => 'aws/s3'
-
-# Bundle gems for certain environments:
-# gem 'rspec', :group => :test
-# group :test do
-#   gem 'webrat'
-# end
