--- a/app-example/Gemfile
+++ b/app-example/Gemfile
@@ -9,7 +9,8 @@
       gem 'sqlite3-ruby', :require => 'sqlite3'
 
       # Bundle the extra gems:
- gem 'devise', '1.1.rc1' 
+      gem 'devise', '1.1.rc1' 
 
 
+      #gem 'rails-footnotes'
 
