--- a/templates/base-rails-3.0.0.rc
+++ b/templates/base-rails-3.0.0.rc
@@ -5,7 +5,7 @@ log 'Set Gemfile to Rails 3.0: Release candidate!'
 
       # Bundle edge Rails & Rack:
       gem 'rails', '3.0.0.rc', :git => 'git://github.com/rails/rails.git'
-      gem 'bundler', '1.0.0.rc.5'
+      gem 'bundler', '1.0.0.rc.5', :git => 'git://github.com/carlhuda/bundler.git'
 
       gem 'rack', '1.2.1', :git => 'git://github.com/rails/rack.git'
       gem 'rack-mount'#, '0.6.9', :git => 'git://github.com/josh/rack-mount.git'
